<resources>
    <string name="app_name">AbhishekJamwal_COMP304Section001_LabAssignment4</string>
    <string name="login">Login</string>
    <string name="register">Create a new account</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="g4autosale">G4 Auto sale</string>
    <string name="buyanewcar">Buy a new car</string>
    <string name="addnewcar">Add a new car</string>
    <string name="mygarage">My garage</string>
    <string name="updateprofile">Update profile</string>
    <string name="lastname">Lastname</string>
    <string name="firstname">Firstname</string>
    <string name="postalcode">Postal code</string>
    <string name="city">City</string>
    <string name="address">Address</string>
    <string name="updating_profile">Updating profile</string>
    <string name="brandname">Brand name</string>
    <string name="modelname">Model name</string>
    <string name="year">Year</string>
    <string name="price">Price</string>
    <string name="color">Color</string>
    <string name="transmission">Transmission</string>
    <string name="emptyview">No cars available</string>
    <string name="carcheckout">Car Checkout</string>
    <string name="checkout">Checkout</string>
    <string name="cardcvv">Card CVV</string>
    <string name="cardexpiry">Card Expiry date</string>
    <string name="cardname">Cardholder name</string>
    <string name="cardnumber">Credit card number</string>
    <string name="paymentinfo">Payment Information</string>
    <string name="sale_id">Sale ID</string>
    <string name="sale_date">Sale Date</string>
</resources>