<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Views.CarSalesActivity">
    <ScrollView
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
                <LinearLayout
                    android:id="@+id/cardetails"
                    android:layout_marginHorizontal="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/carcheckout"
                        android:textSize="30sp"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="20dp"
                        android:text="@string/carcheckout"
                        android:textColor="@color/purple_500"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>


                    <TextView
                        android:text="@string/brandname"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>



                    <TextView
                        android:id="@+id/brandname"
                        android:textSize="20sp"
                        android:textColor="@color/purple_200"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:text="@string/modelname"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:id="@+id/modelname"
                        android:textSize="20sp"
                        android:textColor="@color/purple_200"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:text="@string/year"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:id="@+id/year"
                        android:textSize="20sp"
                        android:textColor="@color/purple_200"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:text="@string/price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:id="@+id/price"
                        android:textSize="20sp"
                        android:textColor="@color/purple_200"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:text="@string/transmission"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:id="@+id/transmission"
                        android:textSize="20sp"
                        android:textColor="@color/purple_200"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:text="@string/color"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:id="@+id/color"
                        android:textSize="20sp"
                        android:textColor="@color/purple_200"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>



                    <TextView
                        android:layout_marginTop="10dp"
                        android:textSize="20sp"
                        android:text="@string/paymentinfo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>


                    <com.google.android.material.textfield.TextInputLayout
                        android:hint="@string/cardnumber"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_marginTop="4dp"
                            android:lines="1"
                            android:imeOptions="actionNext"
                            android:singleLine="true"
                            android:id="@+id/cardnumber"
                            android:textSize="20sp"
                            android:textColor="@color/purple_200"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:hint="@string/cardname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_marginTop="4dp"
                            android:lines="1"
                            android:imeOptions="actionNext"
                            android:singleLine="true"
                            android:id="@+id/cardname"
                            android:textSize="20sp"
                            android:textColor="@color/purple_200"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>
                    </com.google.android.material.textfield.TextInputLayout>
                    <com.google.android.material.textfield.TextInputLayout
                        android:hint="@string/cardexpiry"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_marginTop="4dp"
                            android:lines="1"
                            android:imeOptions="actionNext"
                            android:singleLine="true"
                            android:id="@+id/cardexpiry"
                            android:textSize="20sp"
                            android:textColor="@color/purple_200"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>
                    </com.google.android.material.textfield.TextInputLayout>
                    <com.google.android.material.textfield.TextInputLayout
                        android:hint="@string/cardcvv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_marginTop="4dp"
                            android:lines="1"
                            android:imeOptions="actionNext"
                            android:singleLine="true"
                            android:id="@+id/cardcvv"
                            android:textSize="20sp"
                            android:textColor="@color/purple_200"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>
                    </com.google.android.material.textfield.TextInputLayout>


                </LinearLayout>


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/checkout"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/cardetails"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginHorizontal="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/checkout" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>