<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <com.google.android.material.card.MaterialCardView
            android:orientation="vertical"
            android:layout_gravity="center"
            android:layout_width="200dp"
            app:cardBackgroundColor="@color/white"
            android:elevation="4dp"
            app:cardCornerRadius="100dp"
            android:padding="40dp"
            android:layout_height="200dp">
            <ImageView
                android:layout_margin="30dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center|center_horizontal|center_vertical"
                app:srcCompat="@drawable/ic_baseline_directions_car_24"
                />
        </com.google.android.material.card.MaterialCardView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/g4autosale"
            android:textAlignment="center"
            android:textSize="30sp"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="20dp"

            android:hint="@string/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/username"
            android:maxLines="1"
            android:tag="1"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="5dp"
            android:hint="@string/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:tag="2"
                android:imeOptions="actionDone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:tag="3"
            android:text="@string/login"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/register"
            android:tag="4"
            app:backgroundTint="@color/design_default_color_secondary_variant"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"/>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>