<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Views.AddNewCarActivity">

    <LinearLayout
        android:id="@+id/profileinfo"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_margin="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/addnewcar">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/addnewcar"
            android:textSize="22sp"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:hint="@string/brandname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_marginTop="4dp"
                android:lines="1"
                android:imeOptions="actionNext"
                android:singleLine="true"
                android:id="@+id/brandname"
                android:textSize="20sp"
                android:textColor="@color/purple_200"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="4dp"
            android:hint="@string/modelname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/modelname"
                android:textSize="20sp"
                android:lines="1"
                android:imeOptions="actionNext"
                android:singleLine="true"
                android:textColor="@color/purple_200"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="4dp"
            android:hint="@string/year"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/year"
                android:textSize="20sp"
                android:lines="1"
                android:imeOptions="actionNext"
                android:singleLine="true"
                android:textColor="@color/purple_200"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="4dp"

            android:hint="@string/price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/price"
                android:textSize="20sp"
                android:lines="1"
                android:imeOptions="actionNext"
                android:singleLine="true"
                android:textColor="@color/purple_200"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="4dp"
            android:hint="@string/color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/color"
                android:textSize="20sp"
                android:textColor="@color/purple_200"
                android:layout_width="match_parent"
                android:lines="1"
                android:imeOptions="actionNext"
                android:singleLine="true"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="4dp"
            android:hint="@string/transmission"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/transmission"
                android:textSize="20sp"
                android:textColor="@color/purple_200"
                android:layout_width="match_parent"
                android:lines="1"
                android:imeOptions="actionDone"
                android:singleLine="true"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>



    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/addnewcar"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintTop_toBottomOf="@id/profileinfo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/addnewcar" />

</androidx.constraintlayout.widget.ConstraintLayout>